新增系统架构设计文档，包含完整物联网闭环架构及边缘层逻辑；更新数据库设计文档，新增守卫报警事件表并标记为未来版本

--- a/数据库设计文档 (V1.0.1).md
+++ b/数据库设计文档 (V1.0.1).md
@@ -65,7 +65,7 @@
   last_heartbeat    DateTime          最后心跳时间      
   ----------------------------------------------------------------------------------------
 
-### 1.3 守卫报警事件表 (guard_events) **\[新增\]**
+### 1.3 守卫报警事件表 (guard_events) **[未来版本 - 守卫模式相关，已创建暂不使用]**
 
 专用于存储"守卫模式"下触发的入侵事件，供前端"守卫日志"模块查询。
 
